[package]
name = "rust_scale"
version = "0.1.0"
authors = ["Raphael Schrader <r.schrader@kostal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"

[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["rt", "stm32f103", "medium"]

[dependencies.panic-semihosting]
version = "0.5.3"

[dependencies.cortex-m-semihosting]
version = "0.3.5"
