[package]
name = "rust_scale"
version = "0.1.0"
authors = ["Raphael Schrader <r.schrader@kostal.com>"]
edition = "2018"

[profile.release]
opt-level = 'z' 

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
ssd1306 = "0.3.0-alpha.4"
numtoa = "0.2.3"

[dependencies.embedded-graphics]
version = "=0.6.0-alpha.3"

[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["rt", "stm32f103", "medium"]

[dependencies.panic-semihosting]
version = "0.5.3"

[dependencies.cortex-m-semihosting]
version = "0.3.5"
 
